--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-!--Test datalarini tek bir yerden kontrol etmek için .properties dosyasi olustururuz.
+!--Test datalarini tek bir yerden kontrol etmek i?in .properties dosyasi olustururuz.
 !--     Buradaki verileri(datalari) testimizi calistirirken kullanmak icin test class'imiza properties uzantili
 !--dosyamizdaki datalara ulasmak icin aracilik yapacak configreader class'ina ihtiyacimiz vardir.
 !--Buradaki datalar key=value seklinde calisir. Key=value seklinde calistigi icin ikinci ayni key eklenemez
@@ -34,4 +34,12 @@ password4=Nga^g6!
 
 
 #Google
-googleUrl=https://www.google.com
+googleUrl= https://www.google.com.tr/
+arac1=volvo
+arac2=bwm
+arac3=audi
+arac4=mercedes
+arac5=ford
+
+#dataTableUrl
+dataTableUrl=https://editor.datatables.net
